# fans-python

./: .gitignore  doy.yaml  publish.py  publish.sh  pyproject.toml  setup.cfg  sync.sh  test.sh  todo.md
fans/: .gitignore  doy.pip.yaml  namer.py  ports.py
fans/algorithm/: __init__.py
fans/algorithm/tests/: test_algorithm.py
fans/db/: migrate.py
fans/db/tests/: test_migrate.py
fans/dbutil/: introspect.py  migrate.py
fans/dbutil/nos/: __init__.py  __main__.py  nos.py  router.py  service.py
fans/dbutil/store/: collection.py  store.py
fans/dbutil/tagging/: tagging.py  test_tagging.py
fans/dbutil/tests/: test_introspect.py  test_migrate.py
fans/jober/: README.md  __main__.py  app.py  app_test.py  capture.py  conftest.py  event.py  job.py  jober.py  jober_test.py  router.py  run.py  sched.py  target.py  target_test.py  util.py
fans/jober/frontend/: package-lock.json  vite.config.js
fans/jober/job/: job.py  run_test.py
fans/jober/sched/: apscheduler_sched.py
fans/jober/tests/: app_test.py  capture_test.py  conftest.py  job_test.py  jober_test.py  misc_test.py  readme_test.py  run_test.py  (+1 more)
fans/keyboard/: hotkey.py
fans/nos/: README.md  collection.py  cons.py  nos.py  store.py
fans/os/: keyboard.py  rawinput.py
fans/pubsub/: pubsub.py  test_pubsub.py
fans/sync/: README.md  app.py  sqlite_sync.py  sqlite_sync_test.py  sync.py
fans/talks/: README.md
fans/tests/: test_namer.py
fans/win/: win.py
frontend/jober/: index.html  package-lock.json  package.json  vite.config.js
src/fans/: __init__.py  datelib.py  fn.py  logger.py  testutil.py
(+64 files in other folders)
